--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>artifact.gurobilib</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>group.itextpdf</groupId>
+            <artifactId>artifact.itextpdf</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
